<resources>
    <string name="app_name_release" translatable="false">Samiz</string>
    <string name="app_name_debug" translatable="false">Samiz Debug</string>
    <string name="app_name">Samiz</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="permissions_required">The app requires permissions to work</string>
    <string name="service">Service</string>
    <string name="samiz_is_running_in_background">Samiz is running in background</string>
    <string name="sync_service">Sync Service</string>
    <string name="start">Test</string>
    <string name="instructions">"Instructions for alpha testing:\n1. Install a nostr client (i.e. Amethyst)\n2. Install a local relay (i.e. Citrine)\n3. Connect your client to your local relay\n4. Turn off internet in any number of devices\n5. Start Samiz (do it now for real time sync testing or after step 6 for Negentropy testing)\n6. Write a note in your offline device\n\nNote: This version works with a mesh of any number of devices"</string>
    <string name="foundDevicesCount">Found devices: %1$d</string>
    <string name="eventReceivedCount">Received events: %1$d</string>
    <string name="eventSentCount">Sent events: %1$d</string>
    <string name="bluethoot_not_supported">This device has no bluethooth.</string>
    <string name="bluethoot_not_enabled">Samiz can\'t work with bluethoot disabled.</string>
    <string name="disableBatteryOptimizerTitle">Disable battery optimization</string>
    <string name="disableBatteryOptimizerMessage">To keep the Bluetooth connection stable, please disable battery optimization for Samiz.</string>
    <string name="disableBatteryOptimizerAccept">Go to settings</string>
    <string name="disableBatteryOptimizerCancel">Cancel</string>
    <string name="start_session">Start Session</string>
    <string name="stop_session">Stop Session</string>
    <string name="local_relay_not_found">Local relay not found. Make sure it is started and available in port :4869.</string>
</resources>
